--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Privacy Policy – Clear Cut Code</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 20px;
+      line-height: 1.6;
+      color: #333;
+    }
+    h1 {
+      color: #111;
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 10px;
+    }
+  </style>
 </head>
 <body>
   <h1>Privacy Policy</h1>
   <p><strong>Effective Date:</strong> [Insert Date]</p>
-  <p>Clear Cut Code is committed to protecting your privacy. We collect limited information to personalize your experience and improve the app. This includes basic details like your name and email (if you create an account), your activity within the app (such as completed challenges and selected study plans), and general device information to help us troubleshoot and enhance performance.</p>
-  <p>We use this information to personalize study plans, track your progress, improve features, and communicate important updates. We do not sell your data. Any third-party services we use (like analytics) follow strict privacy guidelines.</p>
-  <p>You can contact us at any time to access, modify, or delete your data by emailing [your@email.com].</p>
-</body>
-</html>
+
+  <p>Clear Cut Code is committed to protecting your privacy. We only collect information necessary to provide a personalized and effective user experience.</p>
+
+  <h2>Information We Collect</h2>
+  <p>We collect basic information such as your name and email (if you create an account), your app activity (like completed challenges or selected study plans), and general device information to help improve performance.</p>
+
+  <h2>How We Use Your Information</h2>
+  <p>This data is used to personalize study plans, track your progress, improve features, and communicate important updates. We do not sell your data. Any third-party tools we use (such as analytics or login services) follow strict privacy terms.</p>
+
+  <h
