--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <h1>Privacy Policy</h1>
-  <p><strong>Effective Date:</strong> [Insert Date]</p>
+  <p><strong>Effective Date:</strong> 2/2/2026</p>
 
   <p>Clear Cut Code is committed to protecting your privacy. We only collect information necessary to provide a personalized and effective user experience.</p>
 
